Closed Bug 1777327 Opened 3 years ago Closed 3 years ago

Speculative connection doesn't respect LOAD_BYPASS_CACHE flag

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox104 --- fixed

People

(Reporter: kershaw, Assigned: kershaw)

Details

(Whiteboard: [necko-triaged])

Attachments

(1 file)

See the code here.
When a channel has LOAD_BYPASS_CACHE flag, we set NS_HTTP_REFRESH_DNS to its transaction, but we didn't set the same flag to its speculative connection. In the end, this channel could still use a cached DNS record.

Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/80116c1aa5c8 Make specultive connection respect LOAD_BYPASS_CACHE flag, r=necko-reviewers,dragana
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: