Bug 1777327 - Make specultive connection respect LOAD_BYPASS_CACHE flag, r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D150635